ajout https dans css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,13 +11,13 @@
 /************************** Import Fonts and Icons *************************/
 
 /* Bree Serif - From Google Fonts */
-@import url("http://fonts.googleapis.com/css?family=Bree+Serif");
+@import url("https://fonts.googleapis.com/css?family=Bree+Serif");
 
 /* Pacifico - From Google Fonts */
-@import url("http://fonts.googleapis.com/css?family=Pacifico");
+@import url("https://fonts.googleapis.com/css?family=Pacifico");
 
 /* Monserrat - From Google Fonts */
-@import url("http://fonts.googleapis.com/css?family=Montserrat:400,700");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");
 
 
 /************************* General Styles for Tags *************************/
