--- a/templates/base.html
+++ b/templates/base.html
@@ -32,12 +32,12 @@
 
 	<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>        
+		<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>        
 	<![endif]-->
 
 	<!-- Media queries -->
 	<!--[if lt IE 9]>
-		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+		<script src="https://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<![endif]-->
 </head>
 
@@ -158,7 +158,7 @@
 	<!-- ======================= JQuery libs =========================== -->
 
 		<!-- jQuery -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write("<script src=\"{% static 'js/jquery-1.9.1.min.js' %}\"")</script>
 		
 		<!-- Respond.js media queries for IE8 -->
@@ -167,7 +167,7 @@
 		<!-- Bootstrap-->
 		<script src="{% static 'js/bootstrap.min.js' %}" ></script>
 
-		<!-- Placeholder.js http://widgetulous.com/placeholderjs/ -->
+		<!-- Placeholder.js https://widgetulous.com/placeholderjs/ -->
 		<!--[if lt IE 9]>
 		<script src="{% static 'js/placeholder.js' %}" ></script>
 		<script>Placeholder.init();</script>
@@ -189,7 +189,7 @@
 		<script src="{% static 'js/jquery.scrollTo-1.4.3.1-min.js' %}"></script>
 
 		<!-- Gmaps -->
-		<script src="http://maps.google.com/maps/api/js?sensor=true" ></script>
+		<script src="https://maps.google.com/maps/api/js?sensor=true" ></script>
 		<script src="{% static 'js/gmaps.js' %}" ></script>
 
 		<!-- Custom -->
