Modification CSS/JS + CHF en violet, liste snake, anciens serpents en filtre, suppression phone footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -710,7 +710,7 @@ form.search .input-group-addon {
                 }
 
                     .grid ul li a .tag.sale {
-                        background: #7e8333;
+                        background: #722881;
                     }
 
             .grid ul li .more {
