--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,13 +11,13 @@
 /************************** Import Fonts and Icons *************************/
 
 /* Bree Serif - From Google Fonts */
-@import url("http://fonts.googleapis.com/css?family=Bree+Serif");
+@import url("https://fonts.googleapis.com/css?family=Bree+Serif");
 
 /* Pacifico - From Google Fonts */
-@import url("http://fonts.googleapis.com/css?family=Pacifico");
+@import url("https://fonts.googleapis.com/css?family=Pacifico");
 
 /* Monserrat - From Google Fonts */
-@import url("http://fonts.googleapis.com/css?family=Montserrat:400,700");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");
 
 
 /************************* General Styles for Tags *************************/
@@ -710,7 +710,7 @@ form.search .input-group-addon {
                 }
 
                     .grid ul li a .tag.sale {
-                        background: #7e8333;
+                        background: #722881;
                     }
 
             .grid ul li .more {
