--- a/public/plugins/grid/css/component.css
+++ b/public/plugins/grid/css/component.css
@@ -265,7 +265,7 @@
 }
 
 /* Bring back */
-/* From https://github.com/hakimel/kontext by Hakim El Hattab, http://hakim.se */
+/* From https://github.com/hakimel/kontext by Hakim El Hattab, https://hakim.se */
 .tt-effect-bringback li {
     -webkit-perspective: 1000px;
     perspective: 1000px;
