--- a/snake/templates/snake/list.html
+++ b/snake/templates/snake/list.html
@@ -18,6 +18,7 @@
 					        <ul class="filters">
 						        <li data-filter="all" class="active">{% trans 'Tous' %}</li>
 						        <li data-filter="sale">{% trans 'A vendre' %}</li>
+                                <li data-filter="old">{% trans 'Anciens serpents' %}</li>
                                 {% family %}
 					        </ul>
 				        </div>
@@ -27,13 +28,13 @@
 					<div class="grid">
 						<ul>
                             {% for snake in snakes %}
-							    <li class="{{ snake.family.name }}{% if snake.for_sale %} sale{% endif %} pull-left">
+							    <li class="{{ snake.family.name }}{% if snake.for_sale %} sale{% endif %}{% if snake.old%} old{% endif %} pull-left">
 								    <a href="{% url 'snakes:details' snake.slug snake.pk %}" title="Coeur-de-Siberie - {{ snake.family.name }}: {{ snake.s_name }} {{ snake.mutation }}">
 									    <div class="more">
 										    <i class="icon-search pull-right"></i>
 										    {% if snake.for_sale %}<span class="price">{{ snake.sale_price }}</span>{% endif %}
-										    <span class="wks">{{ snake.birthday }}</span>
-										    <span class="txt">{{ snake.c_name }}</span>
+										    <span class="wks">{{ snake.mutation }}</span>
+										    <span class="txt"></span>
 									    </div>
                                         {% if snake.for_sale %}<span class="tag sale"><span>CHF</span></span>{% endif %}
                                         {% for picture in snake.snakesg.all %}
